--- a/LibraryManagement/LibraryManagement/Views/Home/Create.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/Home/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create book";
 }
 
-<form asp-controller="home" asp-action="create" method="post">
+<form asp-controller="Home" asp-action="Create" method="post">
     <div>
         <label>Title:</label>
         <div>
