--- a/LibraryManagement/LibraryManagement/Views/Home/Delete.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/Home/Delete.cshtml
@@ -8,14 +8,14 @@
     <link href="~/css/DeleteStylest.css" rel="stylesheet" />
 }
 
-<form asp-controller="home" asp-action="delete" method="post">
+<form asp-controller="Home" asp-action="Delete" method="post">
     <input hidden asp-for="Id" />
     <div class=" wrapper">
         <div class="decision">
             <h2>Do you want to remove @Model.Name</h2>
             <div>
                 <button type="submit" class="btn btn-primary">Delete</button>
-                <a asp-action="index" asp-controller="home" class="btn btn-primary">Cancel</a>
+                <a asp-action="Index" asp-controller="Home" class="btn btn-primary">Cancel</a>
             </div>
         </div>
     </div>
