--- a/LibraryManagement/LibraryManagement/Views/Home/Edit.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/Home/Edit.cshtml
@@ -8,7 +8,7 @@
     <link href="~/css/EditStyles.css" rel="stylesheet" />
 }
 
-<form asp-controller="home" asp-action="edit" method="post">
+<form asp-controller="Home" asp-action="Edit" method="post">
     <div asp-validation-summary="All" class="text-danger">
     </div>
     <input hidden asp-for="@Model.CurrentBook.Id" />
@@ -71,6 +71,6 @@
 
     <div class="distance">
         <button type="submit" class="btn btn-primary">Update</button>
-        <a asp-action="index" asp-controller="home" class="btn btn-primary">Cancel</a>
+        <a asp-action="Index" asp-controller="Home" class="btn btn-primary">Cancel</a>
     </div>
 </form>
