--- a/LibraryManagement/LibraryManagement/Views/Shared/_Layout.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/Shared/_Layout.cshtml
@@ -30,6 +30,15 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Create">Add Book</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="RequestHandler">Requests</a>
+                            </li>
+                        }
+                        @if (signInManager.IsSignedIn(User) && User.IsInRole("Member"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="MyBooks">My books</a>
+                            </li>
                         }
                     </ul>
                     <ul class="navbar-nav ml-auto">
