--- a/LibraryManagement/LibraryManagement/Views/_ViewImports.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using LibraryManagement.ViewModel
 @using Microsoft.AspNetCore.Identity;
 @inject SignInManager<ApplicationUser> signInManager;
+@inject IBookRepository _bookRepository;
+@inject IBorrowedBooksRepository _borrowedBooksRepository;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
