--- a/LibraryManagement/LibraryManagement/Views/Shared/PageNotFound.cshtml
+++ b/LibraryManagement/LibraryManagement/Views/Shared/PageNotFound.cshtml
@@ -11,4 +11,4 @@
 </div>
 
 <a asp-controller="home" asp-action="index" class="btn btn-outline-success"
-   style="width:auto">Click here to see the list of all employees</a>
+   style="width:auto">Click here to see the list of all books</a>
